--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^6.0.2",
+    "lucide-react": "^0.278.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.2",
-    "lucide-react": "^0.278.0"
+    "react-router-dom": "^6.20.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
